assets/scss/_mixins.scss
@mixin container {
  margin: 0 auto;
  max-width: #{0.9 * $breakpoint--xl};
  position: relative;
  width: 90%;
}

@mixin page {
  @include container;

  // 100vh minus height of header and footer
  min-height: calc(100vh - 6.5rem);
  min-height: calc(var(--vh, 1vh) * 100 - 6.5rem);
  padding-top: 7.5rem;
  padding-bottom: 4.5rem;

  @media (min-width: $breakpoint--md) {
    min-height: calc(100vh - 4rem);
    min-height: calc(var(--vh, 1vh) * 100 - 4rem);
    padding-top: 9rem;
  }

  @media print {
    margin: 0;
    padding: 0;
    width: 100%;
  }
}

@mixin dots($clip-path) {
  @supports (clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%)) {
    &::before {
      $background-size: 0.75rem;
      $background-dots: radial-gradient(
        $color__primary--muted 15%,
        transparent 15%
      );

      background-image: $background-dots, $background-dots;
      background-size: $background-size $background-size;
      background-position: 0 0,
        math.div($background-size, 2) math.div($background-size, 2);
      clip-path: $clip-path;
      content: '';
      height: 100%;
      left: 50%;
      position: absolute;
      top: 0;
      transform: translateX(-50%);
      width: 100vw;
      z-index: -1;
    }
  }
}

@mixin title {
  font-weight: 400;
  text-shadow: 0.03em 0.03em $color__primary--muted;
  -webkit-font-smoothing: antialiased;
  -webkit-text-stroke: $border-weight $color__primary;
  -webkit-text-fill-color: transparent;
}

@mixin title--primary {
  color: $color__primary;
  font-size: 110%;
  font-weight: 700;
  line-height: 1;
  -webkit-font-smoothing: auto;
  -webkit-text-stroke: 0 currentColor;
  -webkit-text-fill-color: currentColor;
}

@mixin link($color: $color__body, $heading: false) {
  @include link--shadow($color);

  background-image: linear-gradient(
      $color__primary--muted,
      $color__primary--muted
    ),
    linear-gradient($color__primary, $color__primary);
  background-size: 100% $border-weight, 0% $border-weight;
  background-repeat: no-repeat;
  color: $color__primary;
  transition: background-size 300ms $transition__snappy;

  @if $heading {
    background-position: bottom 0.2rem left;
  } @else {
    background-position: bottom left;
  }

  &:hover {
    @include link--active;
  }
}

@mixin link--active {
  background-size: 100% $border-weight;
}

@mixin link--shadow($color) {
  $text-shadow: 0 0 $color;
  @for $x from -3 through 3 {
    @for $y from -3 through 3 {
      $text-shadow: #{$text-shadow},
        #{math.div($x, 20)}ex #{math.div($y, 50)}em $color;
    }
  }

  text-shadow: $text-shadow;
}

@mixin button {
  background-color: $color__body--overlay;
  border: $border-weight solid $color__primary;
  border-radius: $border-radius !important;
  color: $color__primary;
  cursor: pointer;
  opacity: 100%;
  padding: 0.4rem 1rem;
  position: relative;
  transition: opacity 150ms $transition__normal,
    transform 150ms $transition__normal;

  &::before,
  &::after {
    content: '';
    border-radius: $border-radius;
    inset: -$border-weight;
    position: absolute;
  }

  &::before {
    box-shadow: $box-shadow--primary-small;
    opacity: 50%;
    transition: box-shadow 150ms $transition__normal;
    z-index: -1;
  }

  &::after {
    background-image: linear-gradient($color__body--overlay, transparent 40%),
      linear-gradient(transparent 60%, $color__primary--muted);
    opacity: 20%;
  }

  &:hover,
  &:focus {
    opacity: 90%;

    &::before {
      box-shadow: $box-shadow--primary;
    }
  }

  &:focus {
    outline: none !important;
    transform: scale(1.05);
  }

  &:disabled {
    cursor: not-allowed;
    opacity: 50%;
    transform: none;

    &::before {
      box-shadow: $box-shadow--primary-small;
    }
  }
}

@mixin button--primary {
  background-color: $color__primary;
  color: $color__body;

  &::before {
    opacity: 100%;
  }
}

